--- a/frontend/filme_detail.html
+++ b/frontend/filme_detail.html
@@ -39,7 +39,7 @@
           <div class="filme-cover">
             <img
               id="filme-capa"
-              src="img/default-movie.jpg"
+              src="img/matrix.jpg"
               alt="Capa do filme"
             />
           </div>
